# KernelQ

./: .env.example  .env.local  .env.tunnel  .gitignore  CLI-TOOLS-DOCUMENTATION.md  CLI-UPDATES-SUMMARY.md  CMakeLists.txt  DEPLOYMENT-GUIDE.md  ENHANCED_VALIDATION_IMPLEMENTATION_SUMMARY.md  GOOGLE_SSO_SETUP.md  GPU-TESTING-IMPLEMENTATION.md  QUICK-REFERENCE.md  README-FRAMEWORK-ARCHITECTURE.md  README-INTELLISENSE-DEVELOPER.md  README-MIGRATION-GUIDE.md  README-PROBLEM-CREATION.md  README-PROBLEM-FRAMEWORK.md  README-VALIDATION-SYSTEM.md  README.md  VALIDATION-SYSTEM-SUMMARY.md  VALIDATION_RULES_NOTEPAD.md  VALIDATION_SYSTEM_OVERHAUL.md  analyze_timeout_behavior.py  analyze_validation.py  broken_solution_test.json  check-deployment.sh  complete_problem_50_solution.c  debug_compilation.py  deploy-kernelq.sh  detailed_timeout_test.py  final_solution_test.json  final_test.py  fix-kernelq-dns.sh  kernelq_urls.txt  package-lock.json  package.json  problem50_solution.c  problem50_solution_final.c  problem50_solution_fixed.c  repomix-output.xml  (+22 more)
.claude/: settings.local.json
ai-tutor/: socratic_c_tutor.py
clangd-server/workspace/: CMakeLists.txt  kernel_macros.h  main.c
clangd-server/workspace/.cache/clangd/index/: alarmtimer.h.71656AE231861906.idx  align.h.C412A488F600FCCB.idx  arch_topology.h.7AB1C638058B9F93.idx  atomic-arch-fallback.h.B08740D86360DB3D.idx  atomic-instrumented.h.C8F4AF653A273A9D.idx  atomic-long.h.DBCCFEABD0C1A86B.idx  atomic.h.79F301E766ED4596.idx  autoconf.h.2B553FBC9AAD91A7.idx  auxvec.h.4EE0DE89FF919D01.idx  auxvec.h.706E6E559E381C7F.idx  auxvec.h.AA6951D603FD99D6.idx  bitmap.h.DA3022081967389C.idx  bitops.h.9B9CC5F4A1EF2AD4.idx  bits.h.2E73B07DE7592B80.idx  bits.h.9E0AC6D10A74BF16.idx  bitsperlong.h.067E03188D8D20AD.idx  bitsperlong.h.7F942C5FDD169596.idx  bitsperlong.h.9B1B1BBF661ECCCE.idx  bottom_half.h.F0A9EAC1F63D46A5.idx  bounds.h.856118138C7C5B89.idx  bug.h.1682117EEFA3F7AD.idx  build_bug.h.930C9586C4DEEFD0.idx  buildid.h.02056B705F74C375.idx  byteorder.h.EF005B3CB98A6219.idx  cache.h.952197B9C786FD7B.idx  cleanup.h.1D68B3484D3A760E.idx  clocksource_ids.h.87C010FD6E0C3DA6.idx  compiler-clang.h.87A3FA1973A7BA20.idx  compiler.h.C9EAAC7238A2448F.idx  compiler_attributes.h.F0B03FD4CCCF1465.idx  compiler_types.h.14CD507E45687ADD.idx  completion.h.531BE3D4D0EB53EA.idx  const.h.5A94D21FEADC9394.idx  const.h.CAC915920097B936.idx  const.h.F92509C14C8692B9.idx  container_of.h.6EF5367C68459DDE.idx  context_tracking_irq.h.F0D4EA4CC02AC038.idx  cpumask.h.24F18375211F88A5.idx  debug_locks.h.945B6C203CD3BB35.idx  debugobjects.h.31B8A6B3FFE62A07.idx  (+229 more)
(+283 files in other folders)
